# libpoly

./: .travis.yml  CMakeLists.txt
include/: polyxx.h
include/polyxx/: algebraic_number.h  assignment.h  context.h  conversion.h  dyadic_interval.h  dyadic_rational.h  integer.h  integer_ring.h  interval.h  interval_assignment.h  polynomial.h  polynomial_utils.h  rational.h  rational_interval.h  root_isolation.h  sign_condition.h  upolynomial.h  upolynomial_roots.h  utils.h  value.h  variable.h
src/: CMakeLists.txt
src/polyxx/: algebraic_number.cpp  assignment.cpp  context.cpp  conversion.cpp  dyadic_interval.cpp  dyadic_rational.cpp  integer.cpp  integer_ring.cpp  interval.cpp  interval_assignment.cpp  polynomial.cpp  rational.cpp  rational_interval.cpp  root_isolation.cpp  sign_condition.cpp  upolynomial.cpp  upolynomial_roots.cpp  utils.cpp  value.cpp  variable.cpp
test/: CMakeLists.txt
test/polyxx/: CMakeLists.txt  test_algebraic_number.cpp  test_assignment.cpp  test_context.cpp  test_dyadic_interval.cpp  test_dyadic_rational.cpp  test_integer.cpp  test_interval.cpp  test_polynomial.cpp  test_rational.cpp  test_rational_interval.cpp  test_upolynomial.cpp  test_value.cpp  test_variable.cpp
